correction alignement menu burger

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ header {
 .menu-wrap .hamburger >div {
     position: relative;
     width: 80%;
-    height: 12%;
+    height: 11%;
     background-color: black;
     display: flex;
     align-items: center;
@@ -178,7 +178,7 @@ header {
         height: 2px;
     }
     .menu-wrap .hamburger >div::after {
-        top: 6px;
+        top: 5px;
         height: 2px;
     }
     .menu-wrap .toggler {
